[package]
name = "gl"
version = "0.1.0"
edition = "2021"
authors = ["GardenLiminal Contributors"]
description = "Codex - Process isolation runtime with Liminal-DB integration"
license = "MIT"

[lib]
name = "gl"
path = "src/lib.rs"

[[bin]]
name = "gl"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# System calls
rustix = { version = "0.38", features = ["process", "fs", "mount", "thread"] }
nix = { version = "0.29", features = ["user", "mount", "sched", "signal", "process"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"

# OCI image support
tar = "0.4"
flate2 = "1.0"

[dev-dependencies]
tempfile = "3.10"
